2012-08-08 Riccardo Mottola <rm@gnu.org>

	* FileIconView.h:
	use extern instead of APPKIT_EXPORT
	
2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* DiffWrapper.m
	switch unsigned ints to NSUInteger to prevent compilation warning

2012-08-06 Riccardo Mottola <rm@gnu.org>

	* DiffFileChooser.h
	* DiffFileChooser.m
	Setters for left and right filenames.

	* AppController.h
	* Resources/main.gorm
	* AppController.m
	Expose openFiles delegate and if two filenames are supplied,
	automatically open the file chooser with the filenames set.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Resources/main.gorm: Rearrange main menu, add standard edit menu
	items, and add Services menu.

	* DiffTextView.m (-initWithFrame:): Make view selectable.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.h:
	* AppController.m:
	* DiffFileChooser.h:
	* DiffFileChooser.m:
	* FileIconView.h:
	* FileIconView.m:
	* Resources/main.gorm:
	* EasyDiff.pcproj/PC.project:
	* GNUmakefile:
	Present a dialog upon selecting the Compare Files menu command
	where the user can choose the files to compare.

	* AUTHORS:
	* EasyDiff.pcproc/PC.project:
	* EasyDiffInfo.plist:
	Update list of authors.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* EasyDiff.pcproj:
	* PC.project:
	* GNUmakefile:
	* GNUmakefile.preamble:
	* EasyDiffInfo.plist:
	Upgrade project and support files to latest PC version.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* DiffMiddleView.m (-setLeftChanged:andRightChanges:):
	Use -setTitle: to set NSButtonCell titles.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.m (-compareFilesToCVS:):
	* DiffMiddleView.m (-dealloc):
	* DiffTextView.m (-setLineRanges:):
	* DiffView.m (-dealloc):
	* DiffWindowController.m (-dealloc, -_patchMutableString:):
	* DiffWrapper.m (tasktest):
	Remove a number of space leaks and properly stop observing
	notifications when objects are deallocated.
