@@ -1,8 +1,13 @@
+2012-08-09 Riccardo Mottola <rm@gnu.org>
+
+	* DiffWrapper.m:
+	Clean up unsigned transition.
+
 2012-08-08 Riccardo Mottola <rm@gnu.org>
 
 	* FileIconView.h:
 	use extern instead of APPKIT_EXPORT
-	
+
 2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 
 	* DiffWrapper.m
